@@ -9,6 +9,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.stubbing.OngoingStubbing;
 import org.springframework.data.domain.Range;
 import org.springframework.data.redis.connection.stream.MapRecord;
 import org.springframework.data.redis.connection.stream.RecordId;
@@ -31,25 +32,20 @@ public class MessageQueryServiceTest {
 
     @InjectMocks
     private MessageQueryService messageQueryService;
-
+    // 测试initMessageQuery，5种路径
     @Test    // 有Cursor，且能找到对应消息
     void initMessageQuery_shouldReturnMessages_whenCursorExists(){
         String roomId = "room1";
         String userId = "user1";
-        String streamKey = "chat:room:";
         int limit = 10;
         // mock cursor 存在
-        when(messageCursorRepository.getCursor(roomId, userId))
-                .thenReturn(Optional.of("1999-0"));
+        givenCursor(roomId, userId, "1999-0");
 
         // mock Redis返回记录
         MapRecord<String, Object, Object> record1 = buildRecord(roomId, "1999-0", "hello");
 
-        when(messageCacheRepository.reverseRangeMessages(
-                eq(roomId),
-                any(),
-                any()
-        )).thenReturn(List.of(record1));
+        givenReverseReturns(roomId, List.of(record1));
+
         // 执行
         List<MessageDTO> result =
                 messageQueryService.initMessageQuery(roomId, userId, limit);
@@ -64,8 +60,7 @@ public class MessageQueryServiceTest {
                 );
         Range<String> range = rangeCaptor.getValue();
         assertEquals("1999-0", range.getUpperBound().getValue().get());
-        verify(messageCursorRepository, never())
-                .updateCursor(any(), any(), any());
+        verifyCursorUpdate(roomId, userId, "1999-0", 0);
         // 断言，验证返回结果
         assertEquals(1, result.size());
         assertEquals("hello", result.get(0).content());
@@ -74,24 +69,17 @@ public class MessageQueryServiceTest {
     void initMessageQuery_shouldReturnMessages_whenNoCursorExists(){
         String roomId = "room1";
         String userId = "user1";
-        String streamKey = "chat:room:";
         int limit = 10;
         // mock cursor 不存在
-        when(messageCursorRepository.getCursor(roomId, userId))
-                .thenReturn(Optional.empty());
+        givenCursor(roomId, userId, null);
 
         // mock 最新消息ID存在
-        when(messageCacheRepository.getLastMessageId(roomId))
-                .thenReturn(Optional.of("2000-0"));
+        givenLastMessageId(roomId, "2000-0");
 
         // mock Redis返回记录
         MapRecord<String, Object, Object> record1 = buildRecord(roomId, "2000-0", "hello");
 
-        when(messageCacheRepository.reverseRangeMessages(
-                eq(roomId),
-                any(),
-                any()
-        )).thenReturn(List.of(record1));
+        givenReverseReturns(roomId, List.of(record1));
 
         // 执行
         List<MessageDTO> result =
@@ -107,8 +95,7 @@ public class MessageQueryServiceTest {
                 );
         Range<String> range = rangeCaptor.getValue();
         assertEquals("2000-0", range.getUpperBound().getValue().get());
-        verify(messageCursorRepository, times(1))
-                .updateCursor(roomId, userId, "2000-0");
+        verifyCursorUpdate(roomId, userId, "2000-0", 1);
         assertEquals(1, result.size());
         assertEquals("hello", result.get(0).content());
     }
@@ -116,35 +103,22 @@ public class MessageQueryServiceTest {
     void initMessageQuery_shouldReturnMessages_whenCursorExistsButNoMatchingMessages(){
         String roomId = "room1";
         String userId = "user1";
-        String streamKey = "chat:room:";
         int limit = 10;
         // mock cursor 存在
-        when(messageCursorRepository.getCursor(roomId, userId))
-                .thenReturn(Optional.of("1999-0"));
+        givenCursor(roomId, userId, "1999-0");
         // mock 最新消息ID存在
-        when(messageCacheRepository.getLastMessageId(roomId))
-                .thenReturn(Optional.of("2000-0"));
+        givenLastMessageId(roomId, "2000-0");
 
         // mock Redis返回记录
         MapRecord<String, Object, Object> record1 = buildRecord(roomId, "2000-0", "hello");
 
-        when(messageCacheRepository.reverseRangeMessages(
-                eq(roomId),
-                argThat(range ->
-                        range.getUpperBound().getValue().get().equals("1999-0")
-                ),
-                any()
-        )).thenReturn(Collections.emptyList());
         // 第一次返回空列表，第二次返回有消息
-        when(messageCacheRepository.reverseRangeMessages(
-                eq(roomId),
-                any(),
-                any()
-        )).thenReturn(Collections.emptyList())
-                .thenReturn(List.of(record1));
+        givenReverseReturns(roomId, Collections.emptyList(), List.of(record1));
         // 执行
         List<MessageDTO> result = messageQueryService.initMessageQuery(roomId, userId, limit);
-        ArgumentCaptor<Range<String>> rangeCaptor = ArgumentCaptor.forClass(Range.class);    // 捕获参数Range, 预期为从2000-0开始
+
+        // 捕获参数Range, 预期为从2000-0开始
+        ArgumentCaptor<Range<String>> rangeCaptor = ArgumentCaptor.forClass(Range.class);
         verify(messageCacheRepository, times(2))
                 .reverseRangeMessages(
                         eq(roomId),
@@ -157,11 +131,56 @@ public class MessageQueryServiceTest {
 
         assertEquals("2000-0",
                 ranges.get(1).getUpperBound().getValue().get());
-        verify(messageCursorRepository, times(1))
-                .updateCursor(roomId, userId, "2000-0");
+
+        verifyCursorUpdate(roomId, userId, "2000-0", 1);
+
         assertEquals(1, result.size());
         assertEquals("hello", result.get(0).content());
     }
+    @Test    // 无Cursor，无最新消息ID
+    void initMessageQuery_shouldReturnEmptyList_whenNoCursorAndNoLastMessageId(){
+        String roomId = "room1";
+        String userId = "user1";
+        int limit = 10;
+        // mock cursor 不存在
+        givenCursor(roomId, userId, null);
+        // mock 最新消息ID不存在
+        givenLastMessageId(roomId, null);
+        // 执行
+        List<MessageDTO> result = messageQueryService.initMessageQuery(roomId, userId, limit);
+        // 验证
+        verifyCursorUpdate(roomId, userId, null, 0);
+        verify(messageCacheRepository, never())
+                .reverseRangeMessages(
+                        any(),
+                        any(),
+                        any()
+                );
+        assertEquals(0, result.size());
+    }
+    @Test    // Cursor无效，无最新消息Id
+    void initMessageQuery_shouldReturnEmptyList_whenCursorInvalidAndNoLastMessage(){
+        String roomId = "room1";
+        String userId = "user1";
+        int limit = 10;
+        // mock cursor 存在，但无效
+        givenCursor(roomId, userId, "1999-0");
+        // mock 最新消息ID不存在
+        givenLastMessageId(roomId, null);
+        givenReverseReturns(roomId, Collections.emptyList());
+        // 执行
+        List<MessageDTO> result = messageQueryService.initMessageQuery(roomId, userId, limit);
+        // 验证
+        verifyCursorUpdate(roomId, userId, null, 0);
+        verify(messageCacheRepository, times(1))
+                .reverseRangeMessages(
+                        eq(roomId),
+                        any(),
+                        any()
+                );
+        assertEquals(0, result.size());
+    }
+
     private MapRecord<String, Object, Object> buildRecord(String roomId, String id, String content){
         Map<Object, Object> contentMap = new HashMap<>();
         contentMap.put("senderId", "user1");
@@ -172,5 +191,28 @@ public class MessageQueryServiceTest {
                 .in(roomId)
                 .ofMap(contentMap)
                 .withId(RecordId.of(id));
+    }
+    private void givenReverseReturns(String roomId, List<?>... results){
+        OngoingStubbing<List<MapRecord<String, Object, Object>>> stubbing =
+                when(messageCacheRepository.reverseRangeMessages(
+                        eq(roomId),
+                        any(),
+                        any()
+                ));
+        for (List<?> result : results) {
+            stubbing = stubbing.thenReturn((List<MapRecord<String, Object, Object>>) result);
+        }
+    }
+    private void verifyCursorUpdate(String roomId, String userId, String expectedCursor, int times){
+        verify(messageCursorRepository, times(times))
+                .updateCursor(roomId, userId, expectedCursor);
+    }
+    private void givenCursor(String roomId, String userId, String cursor){
+        when(messageCursorRepository.getCursor(roomId, userId))
+                .thenReturn(Optional.ofNullable(cursor));
+    }
+    private void givenLastMessageId(String roomId, String lastMessageId){
+        when(messageCacheRepository.getLastMessageId(roomId))
+                .thenReturn(Optional.ofNullable(lastMessageId));
     }
 }
